--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -1,20 +1,23 @@
 .login-page {
-    position: relative;
     text-align: center;
+    position: relative;
+    background-color: rgb(32, 32, 32);
 }
 
 .login-container {
     color: white;
     background-color: firebrick;
-    position: absolute;
-    top: 25%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 200px;
-    height: 150px;
+    width: 350px;
+    height: 350px;
     border-radius: 15px;
+    margin: 0 auto;
+    margin-top: 75px;
 }
 
-.background-img {
-    width: 100%;
+.form-input-box {
+    margin: 50px;
+}
+
+.form-input {
+    height: 25px;
 }
