--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
-body {
+body, html {
+  height: 100%;
   margin: 0;
+}
+
+body {
   background-color: rgb(32, 32, 32);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
