--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -1,17 +1,24 @@
 .login-page {
-    text-align: center;
+    background-image: url("../assets/plane1.jpg");
+    height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     position: relative;
-    background-color: rgb(32, 32, 32);
 }
 
 .login-container {
-    color: white;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color: firebrick;
-    width: 350px;
-    height: 350px;
+    color: white;
+    border: 2px solid black;
     border-radius: 15px;
-    margin: 0 auto;
-    margin-top: 75px;
+    padding: 25px;
+    margin-top: -250px;
 }
 
 .form-input-box {
