Signup page css

--- a/src/css/Signup.css
+++ b/src/css/Signup.css
@@ -1,5 +1,5 @@
 .signup-page {
-    background-image: url("../assets/plane1.jpg");
+    background-image: url("../assets/airport2.jpg");
     height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
