--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -13,8 +13,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: firebrick;
-    color: white;
+    background-color: white;
     border: 2px solid black;
     border-radius: 15px;
     padding: 25px;
@@ -23,8 +22,14 @@
 
 .form-input-box {
     margin: 50px;
+    color: white;
 }
 
 .form-input {
     height: 25px;
+    color: white;
+}
+
+.form-input-button {
+    margin: 10px;
 }
