--- a/src/css/Signup.css
+++ b/src/css/Signup.css
@@ -13,8 +13,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: dodgerblue;
-    color: white;
+    background-color: white;
     border: 2px solid black;
     border-radius: 15px;
     padding: 25px;
